Initial implementation of vpnCIDR support

--- a/config/crd/bases/vpn.wireguard-operator.io_wireguardpeers.yaml
+++ b/config/crd/bases/vpn.wireguard-operator.io_wireguardpeers.yaml
@@ -40,10 +40,7 @@ spec:
             description: The desired state of the peer.
             properties:
               address:
-                description: |-
-                  INSERT ADDITIONAL SPEC FIELDS - desired state of cluster
-                  Important: Run "make" to regenerate code after modifying this file
-                  The address of the peer.
+                description: Manually set peer address
                 type: string
               allowedIPs:
                 description: The AllowedIPs of the peer.
