--- a/config/crd/bases/vpn.wireguard-operator.io_wireguards.yaml
+++ b/config/crd/bases/vpn.wireguard-operator.io_wireguards.yaml
@@ -203,6 +203,11 @@ spec:
                 description: A boolean field that specifies whether to use the userspace
                   implementation of Wireguard instead of the kernel one.
                 type: boolean
+              vpnCIDR:
+                description: CIDR to use for VPN network
+                pattern: "^([0-9]{1,3}\\.){3}[0-9]{1,3}\/[0-9]{1,2}$"
+                example: "10.8.0.0/24"
+                type: string
             type: object
           status:
             description: WireguardStatus defines the observed state of Wireguard
